Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -99,7 +99,7 @@
     {
      "data": {
       "text/plain": [
-       "<urllib3.response.HTTPResponse at 0x7fb23a4c5358>"
+       "<urllib3.response.HTTPResponse at 0x7fa9bf0b9320>"
       ]
      },
      "execution_count": 3,
@@ -139,7 +139,7 @@
     {
      "data": {
       "text/plain": [
-       "<requests.adapters.HTTPAdapter at 0x7fb23a4b3978>"
+       "<requests.adapters.HTTPAdapter at 0x7fa9bf09b3c8>"
       ]
      },
      "execution_count": 5,
@@ -159,7 +159,7 @@
     {
      "data": {
       "text/plain": [
-       "'{\"timestamp\": 1557862907, \"message\": \"success\", \"iss_position\": {\"latitude\": \"51.2170\", \"longitude\": \"79.5923\"}}'"
+       "'{\"timestamp\": 1557863692, \"message\": \"success\", \"iss_position\": {\"latitude\": \"33.7835\", \"longitude\": \"143.9680\"}}'"
       ]
      },
      "execution_count": 6,
@@ -206,7 +206,7 @@
     {
      "data": {
       "text/plain": [
-       "{'latitude': '51.2170', 'longitude': '79.5923'}"
+       "{'latitude': '33.7835', 'longitude': '143.9680'}"
       ]
      },
      "execution_count": 9,
@@ -246,7 +246,7 @@
     {
      "data": {
       "text/plain": [
-       "{'Server': 'nginx/1.10.3', 'Date': 'Tue, 14 May 2019 19:41:48 GMT', 'Content-Type': 'application/json', 'Content-Length': '112', 'Connection': 'keep-alive', 'access-control-allow-origin': '*'}"
+       "{'Server': 'nginx/1.10.3', 'Date': 'Tue, 14 May 2019 19:54:52 GMT', 'Content-Type': 'application/json', 'Content-Length': '113', 'Connection': 'keep-alive', 'access-control-allow-origin': '*'}"
       ]
      },
      "execution_count": 11,
@@ -267,9 +267,9 @@
      "data": {
       "text/plain": [
        "{'Server': 'nginx/1.10.3',\n",
-       " 'Date': 'Tue, 14 May 2019 19:41:48 GMT',\n",
+       " 'Date': 'Tue, 14 May 2019 19:54:52 GMT',\n",
        " 'Content-Type': 'application/json',\n",
-       " 'Content-Length': '112',\n",
+       " 'Content-Length': '113',\n",
        " 'Connection': 'keep-alive',\n",
        " 'access-control-allow-origin': '*'}"
       ]
