Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1223,23 +1223,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(ast.literal_eval(resp.text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'pandas' has no attribute 'dataframe'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-34-b8ede26b1d1f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataframe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mast\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mliteral_eval\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'pandas' has no attribute 'dataframe'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>message</th>\n",
+       "      <th>number</th>\n",
+       "      <th>people</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>success</td>\n",
+       "      <td>6</td>\n",
+       "      <td>{'craft': 'ISS', 'name': 'Oleg Kononenko'}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>success</td>\n",
+       "      <td>6</td>\n",
+       "      <td>{'craft': 'ISS', 'name': 'David Saint-Jacques'}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>success</td>\n",
+       "      <td>6</td>\n",
+       "      <td>{'craft': 'ISS', 'name': 'Anne McClain'}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>success</td>\n",
+       "      <td>6</td>\n",
+       "      <td>{'craft': 'ISS', 'name': 'Alexey Ovchinin'}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>success</td>\n",
+       "      <td>6</td>\n",
+       "      <td>{'craft': 'ISS', 'name': 'Nick Hague'}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>success</td>\n",
+       "      <td>6</td>\n",
+       "      <td>{'craft': 'ISS', 'name': 'Christina Koch'}</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   message  number                                           people\n",
+       "0  success       6       {'craft': 'ISS', 'name': 'Oleg Kononenko'}\n",
+       "1  success       6  {'craft': 'ISS', 'name': 'David Saint-Jacques'}\n",
+       "2  success       6         {'craft': 'ISS', 'name': 'Anne McClain'}\n",
+       "3  success       6      {'craft': 'ISS', 'name': 'Alexey Ovchinin'}\n",
+       "4  success       6           {'craft': 'ISS', 'name': 'Nick Hague'}\n",
+       "5  success       6       {'craft': 'ISS', 'name': 'Christina Koch'}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.dataframe(ast.literal_eval(resp.text))"
+    "df"
    ]
   },
   {
@@ -1250,6 +1329,13 @@
     "\n",
     "In this lesson we saw how we can use request and response methods to query an Open API. We also saw how to look at the contents returned with the API calls and how to parse them. Next, we'll look at connecting to APIs which are not OPEN, i.e. we would need to pass in some authentication information and filter the results. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
