Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1232,22 +1232,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>message</th>\n",
+       "      <th>number</th>\n",
+       "      <th>people</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>success</td>\n",
+       "      <td>6</td>\n",
+       "      <td>{'craft': 'ISS', 'name': 'Oleg Kononenko'}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>success</td>\n",
+       "      <td>6</td>\n",
+       "      <td>{'craft': 'ISS', 'name': 'David Saint-Jacques'}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>success</td>\n",
+       "      <td>6</td>\n",
+       "      <td>{'craft': 'ISS', 'name': 'Anne McClain'}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>success</td>\n",
+       "      <td>6</td>\n",
+       "      <td>{'craft': 'ISS', 'name': 'Alexey Ovchinin'}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>success</td>\n",
+       "      <td>6</td>\n",
+       "      <td>{'craft': 'ISS', 'name': 'Nick Hague'}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>success</td>\n",
+       "      <td>6</td>\n",
+       "      <td>{'craft': 'ISS', 'name': 'Christina Koch'}</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(6, 3)"
+       "   message  number                                           people\n",
+       "0  success       6       {'craft': 'ISS', 'name': 'Oleg Kononenko'}\n",
+       "1  success       6  {'craft': 'ISS', 'name': 'David Saint-Jacques'}\n",
+       "2  success       6         {'craft': 'ISS', 'name': 'Anne McClain'}\n",
+       "3  success       6      {'craft': 'ISS', 'name': 'Alexey Ovchinin'}\n",
+       "4  success       6           {'craft': 'ISS', 'name': 'Nick Hague'}\n",
+       "5  success       6       {'craft': 'ISS', 'name': 'Christina Koch'}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.shape"
+    "df"
    ]
   },
   {
@@ -1264,7 +1335,7 @@
     }
    ],
    "source": [
-    "print(f'There are currently {df.shape[0]} people in space.')"
+    "print(f'There are currently {df.shape[0]} people in space, {map(list(lambda ))}')"
    ]
   },
   {
