--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1323,20 +1323,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-41-d307f0bc7c39>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-41-d307f0bc7c39>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print(f'There are currently {df.shape[0]} people in space, {map(list(lambda x: x['name'], df['people'']))}')\u001b[0m\n\u001b[0m                                                                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are currently 6 people in space.\n"
      ]
     }
    ],
    "source": [
-    "print(f'There are currently {df.shape[0]} people in space, {map(list(lambda x: x['name'], df['people'']))}')"
+    "print(f'There are currently {df.shape[0]} people in space, {map(list(lambda ))}')"
    ]
   },
   {
