Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1232,10 +1232,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Oleg Kononenko',\n",
+       " 'David Saint-Jacques',\n",
+       " 'Anne McClain',\n",
+       " 'Alexey Ovchinin',\n",
+       " 'Nick Hague',\n",
+       " 'Christina Koch']"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(map(lambda x: x['name'], df['people']))"
+   ]
   },
   {
    "cell_type": "code",
@@ -1330,20 +1348,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-41-d307f0bc7c39>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-46-8b3b73d583c8>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-41-d307f0bc7c39>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print(f'There are currently {df.shape[0]} people in space, {map(list(lambda x: x['name'], df['people'']))}')\u001b[0m\n\u001b[0m                                                                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-46-8b3b73d583c8>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print(f'There are currently {df.shape[0]} people in space, {list(map(lambda x: x['name'], df['people']))}')\u001b[0m\n\u001b[0m                                                                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "print(f'There are currently {df.shape[0]} people in space, {map(list(lambda x: x['name'], df['people'']))}')"
+    "print(f'There are currently {df.shape[0]} people in space, {list(map(lambda x: x['name'], df['people']))}')\n",
+    "\n"
    ]
   },
   {
