Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1348,20 +1348,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-46-8b3b73d583c8>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-49-e20813f9d6b7>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-46-8b3b73d583c8>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print(f'There are currently {df.shape[0]} people in space, {list(map(lambda x: x['name'], df['people']))}')\u001b[0m\n\u001b[0m                                                                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-49-e20813f9d6b7>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print(f'There are currently {df.shape[0]} people in space, {(list(map(lambda x: x['name'], df['people'])))}')\u001b[0m\n\u001b[0m                                                                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "print(f'There are currently {df.shape[0]} people in space, {list(map(lambda x: x['name'], df['people']))}')\n",
+    "print(f'There are currently {df.shape[0]} people in space, {(list(map(lambda x: x['name'], df['people'])))}')\n",
     "\n"
    ]
   },
