Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1232,11 +1232,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Oleg Kononenko',\n",
+       " 'David Saint-Jacques',\n",
+       " 'Anne McClain',\n",
+       " 'Alexey Ovchinin',\n",
+       " 'Nick Hague',\n",
+       " 'Christina Koch']"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "astros = list(map(lambda x: x['name'], df['people']))"
+    "list(map(lambda x: x['name'], df['people']))"
    ]
   },
   {
@@ -1332,19 +1348,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are currently 6 people in space, <generator object <genexpr> at 0x7fa9a6345938>\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-49-e20813f9d6b7>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-49-e20813f9d6b7>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print(f'There are currently {df.shape[0]} people in space, {(list(map(lambda x: x['name'], df['people'])))}')\u001b[0m\n\u001b[0m                                                                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "print(f'There are currently {df.shape[0]} people in space, {(x for x in astros)}')\n",
+    "print(f'There are currently {df.shape[0]} people in space, {(list(map(lambda x: x['name'], df['people'])))}')\n",
     "\n"
    ]
   },
