Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1241,6 +1241,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "astro_string=','.join(astros)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"['Oleg Kononenko', 'David Saint-Jacques', 'Anne McClain', 'Alexey Ovchinin', 'Nick Hague', 'Christina Koch']\""
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(astros)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
    "outputs": [
@@ -1332,19 +1361,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are currently 6 people in space, <generator object <genexpr> at 0x7fa9a6345938>\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-57-e3aef367c52e>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-57-e3aef367c52e>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print(f'There are currently {df.shape[0]} people in space, {','.join(astros)'}')\u001b[0m\n\u001b[0m                                                                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "print(f'There are currently {df.shape[0]} people in space, {(x for x in astros)}')\n",
+    "print(f'There are currently {df.shape[0]} people in space, {','.join(astros)'}')\n",
     "\n"
    ]
   },
