--- a/index.ipynb
+++ b/index.ipynb
@@ -1241,11 +1241,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "astro_string=','.join(astros)"
+    "astro_string=', '.join(astros)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "astro_string += '.'"
    ]
   },
   {
@@ -1361,20 +1370,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-57-e3aef367c52e>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-57-e3aef367c52e>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print(f'There are currently {df.shape[0]} people in space, {','.join(astros)'}')\u001b[0m\n\u001b[0m                                                                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are currently 6 people in space, Oleg Kononenko, David Saint-Jacques, Anne McClain, Alexey Ovchinin, Nick Hague, Christina Koch\n"
      ]
     }
    ],
    "source": [
-    "print(f'There are currently {df.shape[0]} people in space, {','.join(astros)'}')\n",
+    "print(f'There are currently {df.shape[0]} people in space, {astro_string}')\n",
     "\n"
    ]
   },
